Arreglado errores de la base de datos en Heroku v0.1

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="YD=o]>W7tW1^eL2LubHc5r6]lMK8c^I^Og::xRpOly1wRLbG/T1K_0pO2G7e
 
 # The application languages
 # ~~~~~
-application.langs="en"
+applicaapplyEvolutions.default=truetion.langs="en"
 
 # Global object class
 # ~~~~~
@@ -46,6 +46,8 @@ db.default.url="jdbc:h2:mem:play"
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+
+applyEvolutions.default=true
 
 # Logger
 # ~~~~~
