Arreglado errores de la base de datos en Heroku v0.2

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="YD=o]>W7tW1^eL2LubHc5r6]lMK8c^I^Og::xRpOly1wRLbG/T1K_0pO2G7e
 
 # The application languages
 # ~~~~~
-applicaapplyEvolutions.default=truetion.langs="en"
+application.langs="en"
 
 # Global object class
 # ~~~~~
