--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="YD=o]>W7tW1^eL2LubHc5r6]lMK8c^I^Og::xRpOly1wRLbG/T1K_0pO2G7e
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="es"
 
 # Global object class
 # ~~~~~
@@ -38,9 +38,12 @@ application.langs="en"
 #
 
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL"
 # db.default.user=sa
 # db.default.password=""
+
+db.default.logStatements=true
+logger.com.jolbox=DEBUG
 
 # Evolutions
 # ~~~~~
